// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`local integration test getFeatureValue, changeFeatureValue with scopes 1`] = `
[
  {
    "errorMessage": "value "{0}" does not match validation regular expression {1}",
    "errorMessageValues": [
      10,
      "^\\d{1}$",
    ],
    "key": "test/feature_e",
    "scopeKey": "component::c1##tenant::t1",
  },
]
`;

exports[`local integration test getFeatureValue, changeFeatureValue with scopes 8`] = `
[
  [
    "error during change remote feature values, switching to local update",
  ],
  [
    "error during change remote feature values, switching to local update",
  ],
  [
    "error during change remote feature values, switching to local update",
  ],
  [
    "error during change remote feature values, switching to local update",
  ],
]
`;

exports[`local integration test getFeatureValue, changeFeatureValue with scopes 9`] = `
[
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
]
`;

exports[`local integration test getFeatureValue, changeFeatureValue with scopes and clearSubScopes, resetFeatureValue 5`] = `
[
  [
    "error during change remote feature values, switching to local update",
  ],
  [
    "error during change remote feature values, switching to local update",
  ],
  [
    "error during change remote feature values, switching to local update",
  ],
  [
    "error during change remote feature values, switching to local update",
  ],
  [
    "error during change remote feature values, switching to local update",
  ],
  [
    "error during change remote feature values, switching to local update",
  ],
]
`;

exports[`local integration test getFeatureValue, changeFeatureValue with scopes and clearSubScopes, resetFeatureValue 6`] = `
[
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
]
`;

exports[`local integration test getFeatureValue, changeFeatureValue without scopes 1`] = `
[
  {
    "errorMessage": "value "{0}" does not match validation regular expression {1}",
    "errorMessageValues": [
      10,
      "^\\d{1}$",
    ],
    "key": "test/feature_e",
    "scopeKey": "//",
  },
]
`;

exports[`local integration test getFeatureValue, changeFeatureValue without scopes 5`] = `
[
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
]
`;

exports[`local integration test getFeatureValues, getFeatureStates 1`] = `
{
  "test/feature_a": {
    "config": {
      "TYPE": "boolean",
    },
    "fallbackValue": false,
    "stateScopedValues": undefined,
  },
  "test/feature_b": {
    "config": {
      "TYPE": "number",
    },
    "fallbackValue": 1,
    "stateScopedValues": undefined,
  },
  "test/feature_c": {
    "config": {
      "TYPE": "string",
    },
    "fallbackValue": "best",
    "stateScopedValues": undefined,
  },
  "test/feature_d": {
    "config": {
      "TYPE": "boolean",
      "VALIDATION": "^(?:true)$",
      "VALIDATION_REG_EXP": /\\^\\(\\?:true\\)\\$/,
    },
    "fallbackValue": true,
    "stateScopedValues": undefined,
  },
  "test/feature_e": {
    "config": {
      "TYPE": "number",
      "VALIDATION": "^\\d{1}$",
      "VALIDATION_REG_EXP": /\\^\\\\d\\{1\\}\\$/,
    },
    "fallbackValue": 5,
    "stateScopedValues": undefined,
  },
  "test/feature_f": {
    "config": {
      "TYPE": "string",
      "VALIDATION": "^(?:best|worst)$",
      "VALIDATION_REG_EXP": /\\^\\(\\?:best\\|worst\\)\\$/,
    },
    "fallbackValue": "best",
    "stateScopedValues": undefined,
  },
  "test/feature_g": {
    "config": {
      "ACTIVE": false,
      "TYPE": "string",
    },
    "fallbackValue": "activeTest",
    "stateScopedValues": undefined,
  },
  "test/feature_h": {
    "config": {
      "APP_URL": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
      "APP_URL_ACTIVE": true,
      "TYPE": "string",
    },
    "fallbackValue": "appUrlTest",
    "stateScopedValues": undefined,
  },
}
`;
